--- a/styles/main.css
+++ b/styles/main.css
@@ -579,7 +579,7 @@ body {
   .control-prev {
     left: calc(50% - 37px);
     z-index: 1; }
-  .slider__social-links {
+  .slider__links {
     display: none; } }
 
 @media (max-width: 1024px) {
