--- a/styles/main.css
+++ b/styles/main.css
@@ -47,6 +47,20 @@ body {
 .text--danger {
   color: #f25656; }
 
+.overlay {
+  background-color: #333;
+  opacity: 0.5;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  z-index: 2;
+  display: none; }
+
+.overlay.show {
+  display: block; }
+
 .header {
   padding: 20px;
   display: -webkit-box;
@@ -96,6 +110,29 @@ body {
       border-radius: 8px; }
     .nav__link:hover {
       color: #e6e6e6; }
+  .nav__close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 32px;
+    height: 32px;
+    opacity: 0.3;
+    display: none; }
+    .nav__close:hover {
+      opacity: 1; }
+    .nav__close:before, .nav__close:after {
+      position: absolute;
+      left: 15px;
+      content: "";
+      height: 33px;
+      width: 2px;
+      background-color: #333; }
+    .nav__close:before {
+      -webkit-transform: rotate(45deg);
+              transform: rotate(45deg); }
+    .nav__close:after {
+      -webkit-transform: rotate(-45deg);
+              transform: rotate(-45deg); }
 
 .bars {
   display: none;
@@ -105,6 +142,9 @@ body {
     height: 4px;
     background-color: #fff;
     margin: 6px 0; }
+
+.hero-wrap {
+  position: relative; }
 
 .hero {
   max-width: 754px;
@@ -119,6 +159,21 @@ body {
     font-size: 24px;
     line-height: 1.5;
     margin-bottom: 42px; }
+  .hero__network-links {
+    position: absolute;
+    right: -20%;
+    top: 45%;
+    text-transform: uppercase;
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg); }
+    .hero__network-links a {
+      padding: 0 40px;
+      color: #253757;
+      text-decoration: none;
+      -webkit-transition: color 0.3s;
+      transition: color 0.3s; }
+      .hero__network-links a:hover {
+        color: #4b70b0; }
 
 .intro {
   padding: 160px 0;
@@ -172,12 +227,19 @@ body {
   height: 256px;
   padding: 48px 32px;
   background-color: #fff;
-  -webkit-box-shadow: 2px 2px 5px 0 rgba(37, 55, 87, 0.2);
-          box-shadow: 2px 2px 5px 0 rgba(37, 55, 87, 0.2);
+  -webkit-box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.03);
+          box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.03);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-align: center;
-  z-index: 1; }
+  z-index: 1;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s; }
+  .step:hover {
+    -webkit-transform: translateY(-15px);
+            transform: translateY(-15px); }
   .step--1 {
     top: 45%;
     right: 35%; }
@@ -282,7 +344,7 @@ body {
   line-height: 1.5; }
 
 .reviews-wrap {
-  padding-top: 160px;
+  padding: 160px 64px 0;
   background-color: #fff; }
 
 .reviews {
@@ -302,8 +364,8 @@ body {
   margin: 10px;
   padding: 75px 32px 48px;
   background-color: #fff;
-  -webkit-box-shadow: 2px 2px 5px 0 rgba(37, 55, 87, 0.2);
-          box-shadow: 2px 2px 5px 0 rgba(37, 55, 87, 0.2);
+  -webkit-box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.03);
+          box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.03);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-align: center;
@@ -353,7 +415,8 @@ body {
 
 .apply {
   text-align: center;
-  padding: 320px 0 160px; }
+  padding: 320px 0 160px;
+  position: relative; }
   .apply__title {
     color: #253757;
     font-size: 48px;
@@ -364,6 +427,69 @@ body {
     line-height: 1.5;
     max-width: 754px;
     margin: 0 auto 57px; }
+
+.bg-item {
+  position: absolute;
+  z-index: -1;
+  border-radius: 50px;
+  -webkit-transform: rotate(30deg);
+          transform: rotate(30deg);
+  opacity: 0.5; }
+  .bg-item--lg {
+    height: 140px;
+    width: 55px; }
+  .bg-item--md {
+    height: 85px;
+    width: 35px; }
+  .bg-item--sm {
+    height: 45px;
+    width: 15px; }
+  .bg-item--success {
+    border: 2px solid #03d542; }
+  .bg-item--primary {
+    border: 2px solid #56ccf2; }
+  .bg-item--warning {
+    border: 2px solid #fcc304; }
+  .bg-item--danger {
+    border: 2px solid #f25656; }
+  .bg-item--violet {
+    border: 2px solid #bc04fc; }
+  .bg-item--1 {
+    top: 50%;
+    left: 15%; }
+  .bg-item--2 {
+    top: 30%;
+    right: 15%; }
+  .bg-item--3 {
+    top: 75%;
+    right: 10%; }
+  .bg-item--4 {
+    top: 25%;
+    left: 12%; }
+  .bg-item--5 {
+    top: 80%;
+    left: 7%; }
+  .bg-item--6 {
+    top: 70%;
+    right: 20%; }
+  .bg-item--7 {
+    top: 60%;
+    right: 3%; }
+  .bg-item--8 {
+    top: 25%;
+    left: 25%; }
+  .bg-item--9 {
+    top: 80%;
+    left: 25%; }
+  .bg-item--10 {
+    top: 25%;
+    right: 7%; }
+  .bg-item--11 {
+    top: 85%;
+    right: 35%; }
+  .bg-item--12 {
+    top: 63%;
+    left: 5%; }
 
 .contacts-wrap {
   display: -webkit-box;
@@ -395,8 +521,9 @@ body {
     text-decoration: none;
     font-weight: 700; }
   .contact-network__link {
-    text-decoration: none;
-    margin-right: 48px; }
+    text-decoration: none; }
+    .contact-network__link:not(:last-child) {
+      margin-right: 48px; }
   .contact-network__icon {
     width: 32px;
     height: 32px; }
@@ -494,46 +621,32 @@ body {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  padding: 8px 15px;
+  height: 64px;
+  width: 80px;
   border: none;
   cursor: pointer;
   outline: none;
   -webkit-transition: background-color 0.3s;
   transition: background-color 0.3s; }
   .control-prev {
-    left: -45px;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px; }
+    left: -80px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px; }
     .control-prev:after {
       content: url("../images/arrow-left.svg"); }
   .control-next {
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px; }
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px; }
     .control-next:after {
       content: url("../images/arrow-right.svg");
       -webkit-transform: rotateZ(180deg);
               transform: rotateZ(180deg); }
   .control:hover {
-    background-color: #cb9d02; }
+    background-color: #e4b003; }
 
 .slider-wrap {
-  position: relative; }
-
-.slider__links {
-  position: absolute;
-  right: -300px;
-  top: 50%;
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg); }
-
-.slider__links a {
-  padding: 0 40px;
-  color: #253757;
-  text-decoration: none;
-  -webkit-transition: color 0.3s;
-  transition: color 0.3s; }
-  .slider__links a:hover {
-    color: #4b70b0; }
+  position: relative;
+  padding: 35px 70px; }
 
 .slider__item {
   position: relative; }
@@ -559,7 +672,6 @@ body {
   margin-bottom: 3rem; }
   .form-group label {
     font-size: 14.4px;
-    line-height: 1.5;
     font-weight: bold; }
 
 .form-control {
@@ -567,20 +679,30 @@ body {
   border-bottom: 1px solid rgba(117, 117, 117, 0.3);
   outline: none;
   width: 100%;
-  background: transparent; }
+  background: transparent;
+  min-height: 30px; }
   .form-control:focus {
     border-bottom: 1px solid black; }
 
 @media (max-width: 1200px) {
   .control {
     left: 50%;
-    bottom: -40px;
+    bottom: -100px;
     top: inherit; }
   .control-prev {
-    left: calc(50% - 37px);
+    left: calc(50% - 80px);
     z-index: 1; }
-  .slider__links {
-    display: none; } }
+  .hero__network-links {
+    position: static;
+    text-align: center;
+    margin-top: 80px;
+    -webkit-transform: rotate(0);
+            transform: rotate(0); }
+  .service {
+    text-align: center; }
+  .service__title,
+  .service__description {
+    max-width: 100%; } }
 
 @media (max-width: 1024px) {
   .skew-background {
@@ -589,11 +711,14 @@ body {
     -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
     right: 0;
     height: 750px; }
+  .slider-wrap {
+    padding: 15px; }
   .intro {
-    padding: 80px 0; }
+    padding: 80px 15px; }
   .service {
     padding: 80px 0; }
-  .process-wrap {
+  .process-wrap,
+  .features-wrap {
     padding: 80px 64px; }
   .process__steps {
     display: -webkit-box;
@@ -608,14 +733,20 @@ body {
     max-width: calc(50% - 30px);
     margin: 15px; }
   .reviews-wrap {
-    padding-top: 80px; }
+    padding: 80px 64px 0; }
+  .reviews {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .review {
+    max-width: calc(50% - 20px); }
   .apply {
     padding: 240px 15px 100px; }
   .feedback,
   .contacts {
     width: 50%; }
-  .header-nav {
-    display: none; }
   .bars {
     display: block; }
   .footer-wrap {
@@ -637,20 +768,50 @@ body {
   .footer-nav__item:not(:last-child) {
     margin-right: 0; }
   .copyright {
-    margin-top: 25px; } }
+    margin-top: 25px; }
+  .header-nav {
+    position: fixed;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    top: 0;
+    left: -300px;
+    padding: 30px;
+    width: 300px;
+    height: 100%;
+    max-width: 303px;
+    background: #fff;
+    z-index: 3;
+    -webkit-transition: left 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: left 0.6s cubic-bezier(0.19, 1, 0.22, 1); }
+  .header-nav.open {
+    -webkit-transition: left 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: left 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+    left: 0; }
+  .nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .nav__close {
+      display: block; }
+  .nav__item,
+  .nav__item:last-child {
+    margin: 0; }
+  .nav__link {
+    color: #253757;
+    display: block;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    border-bottom: 1px solid #e6e6e6;
+    padding: 15px 0; }
+  .nav__link.active:after {
+    height: 2px;
+    bottom: -1px; } }
 
 @media (max-width: 768px) {
   .features-wrap {
     background: #56ccf2;
-    padding: 80px 64px; }
-  .reviews {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-  .review {
-    max-width: calc(50% - 20px); }
+    padding: 80px 54px; }
   .services-wrap {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -666,15 +827,25 @@ body {
     max-width: initial; }
   .hero {
     margin: 50px; }
-  .hero__title {
-    font-size: 44px; }
+    .hero__title {
+      font-size: 44px; }
+    .hero__network-links {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: distribute;
+          justify-content: space-around; }
   .section-header__title {
     font-size: 22px; }
   .slider-info {
     bottom: 40px;
     left: 40px; }
-  .slider-info__text {
-    font-size: 1rem; } }
+    .slider-info__text {
+      font-size: 1rem; }
+  .bg-item {
+    display: none; }
+  .features__description {
+    max-width: 100%; } }
 
 @media (max-width: 580px) {
   .contacts-wrap {
@@ -689,34 +860,53 @@ body {
     width: 100%; }
   .features-wrap {
     padding: 40px 20px; }
+  .features__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 55px; }
+  .features__icon {
+    margin-right: 0;
+    margin-bottom: 20px; }
   .feedback-form {
-    margin: 40px 0; }
-  .hero__title {
-    font-size: 36px;
-    line-height: 36px;
-    margin-bottom: 25px; }
-  .hero__description {
-    font-size: 21px; }
+    margin: 40px 0;
+    text-align: center; }
+    .feedback-form .form-group {
+      text-align: left; }
   .slider-info {
     bottom: 20px;
     left: 15px; }
   .section-header__title {
     margin-bottom: 45px; }
   .control {
-    padding: 5px 15px; }
+    height: 50px; }
   .hero {
     margin: 20px; }
+    .hero__title {
+      font-size: 36px;
+      line-height: 36px;
+      margin-bottom: 25px; }
+    .hero__description {
+      font-size: 21px; }
+    .hero__network-links a {
+      padding: 0; }
   .skew-background {
     height: 700px; }
   .process-wrap {
-    padding: 40px; }
+    padding: 40px 30px; }
   .reviews-wrap {
-    padding-top: 40px; }
+    padding: 40px 20px 0; }
+  .feedback,
+  .contacts {
+    padding: 0 20px; }
   .apply__title {
     font-size: 36px; }
   .apply__description {
     font-size: 21px; }
   .footer-wrap {
-    margin-top: 50px; } }
+    margin: 50px 0; }
+  .contact-network {
+    text-align: center; } }
 
 /*# sourceMappingURL=main.css.map */
